# edge-ai-suites

.github/: CODEOWNERS
.github/workflows/: industrial-edge-insights-time-series-tests.yml
education-ai-suite/: .gitignore
education-ai-suite/smart-classroom/: config.yaml  pipeline.py
education-ai-suite/smart-classroom/api/: endpoints.py
education-ai-suite/smart-classroom/components/: asr_component.py  summarizer_component.py
education-ai-suite/smart-classroom/content_search/: API_Coverage_Analysis.md  README.md  UI_Integration_Complete.md  __init__.py  dev_launcher.py  install.ps1  main.py  requirements_310.txt  requirements_full.txt  requirements_providers.txt  start_services.py
education-ai-suite/smart-classroom/ui/: package-lock.json  package.json
education-ai-suite/smart-classroom/utils/: config_loader.py
health-and-life-sciences-ai-suite/multi_modal_patient_monitoring/helm/: README.md
manufacturing-ai-suite/industrial-edge-insights-multimodal/: Makefile
manufacturing-ai-suite/industrial-edge-insights-time-series/: Makefile
manufacturing-ai-suite/industrial-edge-insights-time-series/tests/: requirements.txt
metro-ai-suite/deterministic-threat-detection/mqtt_data_aggregator/: requirements.txt
metro-ai-suite/image-based-video-search/deployment-package/: application.yaml  deployment-package.yaml
metro-ai-suite/smart-nvr/: pyproject.toml  requirements.txt
metro-ai-suite/smart-nvr/charts/subchart/mqtt-broker/templates/: deployment.yaml
metro-ai-suite/smart-nvr/docs/user-guide/get-started/: deploy-with-helm.md
metro-ai-suite/smart-route-planning-agent/: .pre-commit-config.yaml  README.md
metro-ai-suite/smart-route-planning-agent/chart/: .helmignore  Chart.yaml  values.yaml  values_override.yaml
metro-ai-suite/smart-route-planning-agent/src/: compose.yaml  pyproject.toml
robotics-ai-suite/scripts/: setup-robotics-humble.sh  setup-robotics-jazzy.sh
(+248 files in other folders)
