[tool.poetry]
name = "smart-nvr"
version = "0.1.0"
description = "Smart NVR microservice + UI"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "src" }, { include = "ui" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
watchdog = "6.0.0"
fastapi = "0.128.0"
uvicorn = {version = "0.40.0", extras = ["standard"]}
requests = "2.32.5"
aiofiles = "24.1.0"
pydantic = ">=2.0"
python-dotenv = "1.1.1"
gradio = "6.7.0"
pillow = ">=12.1.1"
paho-mqtt = "2.1.0"
redis = "6.2.0"
aiohttp = "3.13.3"
pytz = "2025.2"
pydantic-settings = ">=2.0.0"
starlette = ">=0.49.1,<0.50"
urllib3 = "2.6.3"

[tool.poetry.group.test.dependencies]
pytest = "9.0.2"
pytest-asyncio = "1.3.0"
pytest-cov = "6.0.0"
httpx = "0.28.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"

[tool.coverage.run]
source = ["src", "ui"]
branch = true
omit = ["ui/interface/interface.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"